--- a/style.css
+++ b/style.css
@@ -4,9 +4,19 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.main {
+    margin: 0 15px;
+}
+
+
+
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .container__left,.container__right {
@@ -19,14 +29,15 @@
 
 
 .container__left li,.container__right li {
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
 }
 
-.container__left input,
-.container__right input
-{
-    float: right;
+input {
     margin-left: 10px;
+    width: 200px;
+    padding-left: 2px;
 }
 
 .country__select {
@@ -34,12 +45,62 @@
     float: right;
 }
 
+.address-sent-letter__input,
+.show-url__input,
+.provide-url__input,
+.trademark-register__input,
+.provide-infor__input,
+.result {
+    padding-left: 2px;
+    margin-left: 10px;
+    cursor: text;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+}
+
 /* Button */
+
+.load {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.result {
+    width: 510px;
+    height: 200px;
+    margin-left: 0;
+}
+
+.btn {
+    display: flex;
+    flex-direction: column;
+    margin-right: 67px;
+}
 .runButton {
+    width: 65px;
+    height: 44px;
     border: none ;
-    background-color: #ebdede;
     border-radius: 2px;
-    padding: 3px 5px;
-    float: right;
+    padding: 15px 18px;
+    box-shadow: -1px 2px 6px 5px rgb(0 0 0 / 5%);
     cursor: pointer;
+    color: aliceblue;
+    background-color: #df0000;
+}
+
+.clear {
+    margin-top: 30px;
+    background-color: #332727;
+    color: aliceblue;
+}
+
+
+
+/* Vo hieu hoa */
+.disabled {
+    background-color: gray;
+    color: white;
+    cursor: default;
 }
